구글 챗에 점심 메뉴를 공지하는 기능 추가
- 크롤링한 점심메뉴 이미지를 구글챗에 보낼수 있다

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "chromedriver": "^90.0.1",
-    "selenium-webdriver": "*"
+    "googleapis": "^75.0.0",
+    "selenium-webdriver": "*",
+    "unirest": "^0.6.0"
   },
   "name": "butler",
   "description": "키튼플래닛의 챗봇",
