서비스 중인 구글 플레이 앱의 사용자 리뷰에 대한 알림을 개발실에서 받아 볼 수 있다

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "chromedriver": "^90.0.1",
+    "dateformat": "^4.5.1",
     "googleapis": "^75.0.0",
     "node-schedule": "^2.0.0",
     "selenium-webdriver": "*",
