Json 파일들 별도의 폴더에 정리 및 README.md 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-config.json
-butler-316109-cc49583efdf2.json
-api-5253024070763610502-353789-581ddfce0378.json
+
+# Json files
+jsonFiles
