--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "version": "1.0.0",
   "main": "/src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node src/test-app.js",
     "start": "node src/app.js"
   },
   "repository": {
