--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "googleapis": "^75.0.0",
     "node-schedule": "^2.0.0",
     "selenium-webdriver": "*",
-    "unirest": "^0.6.0"
+    "unirest": "^0.6.0",
+    "xml-js": "^1.6.11"
   },
   "name": "butler",
   "description": "키튼플래닛의 챗봇",
