OKR 리마인더와 데일리 스크럼 미팅 리마인더의 공휴일 체크 기능을 추가
- 기능별 테스트 코드를 추가했다

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "main": "/src/app.js",
   "scripts": {
     "test": "node src/test-app.js",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "test-scrum-meet-reminder": "node src/scrumMeetReminder/test.js",
+    "test-okr-reminder": "node src/okrReminder/test.js"
   },
   "repository": {
     "type": "git",
